--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "barlowregular",
         "displayregular",
         "gildadisplay",
-        "webfont"
+        "webfont",
+        "Montserrat"
     ]
 }
